Index is updated on put/remove Integrate with noop and opensearch providers